--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/basic.html}">
 <head layout:fragment="head">
-    <title>홈 화면</title>
+    <title>망고마켓</title>
 </head>
 
 <div layout:fragment="content">
