--- a/src/main/resources/templates/post/board.html
+++ b/src/main/resources/templates/post/board.html
@@ -20,7 +20,7 @@
                             <!-- 제품사진-->
                             <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
                             <!-- Product details-->
-                            <div class="card-body p-4">
+                            <div class="card-body p-3">
                                 <div class="text-center">
                                     <!-- 제목-->
                                     <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
@@ -29,7 +29,7 @@
                                     <!-- 가격-->
                                     <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
                                     <!--예약중 배지-->
-                                    <span class="badge bg-secondary" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+                                    <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
 
                                 </div>
                             </div>
