--- a/src/main/resources/templates/post/board.html
+++ b/src/main/resources/templates/post/board.html
@@ -47,12 +47,12 @@
                 <!-- 전역 변수 선언 -->
                 <nav
                         th:with="pageNumber = ${list.pageable.pageNumber}, pageSize = ${list.pageable.pageSize},
-                        totalPages = ${list.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},
-                        tempEndPage = ${startPage + pageSize - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                        totalPages = ${list.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / 10) * pageSize + 1},
+                        tempEndPage = ${startPage + 10 - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
                         aria-label="Page navigation">
                     <ul class="pagination">
                         <!-- 처음으로 이동 -->
-                        <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
+                        <li th:classappend="${pageNumber +1 == 1} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/board(page=0)}">
                                 <span>&laquo; </span>
 <!--                                <span class="sr-only">First</span>-->
@@ -81,7 +81,7 @@
                         </li>
 
                         <!-- 마지막으로 이동 -->
-                        <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
+                        <li th:classappend=" ${pageNumber +1 == totalPages} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/board(page=${totalPages - 1})}">
                                 <span>&raquo; </span>
 <!--                                <span class="sr-only">Last</span>-->
@@ -99,7 +99,7 @@
     <script th:inline="javascript">
         console.log("pageNumber:",[[${list.pageable.pageNumber}]]);
         console.log("pageSize:",[[${list.pageable.pageSize}]]);
-        console.log("totalPage:", [[${list.totalPages}]]);
+        console.log("totalPages:", [[${list.totalPages}]]);
 
     </script>
 </div>
