--- a/src/main/resources/templates/member/memberInfo.html
+++ b/src/main/resources/templates/member/memberInfo.html
@@ -5,8 +5,8 @@
 
 <head layout:fragment="head">
     <title>회원 정보 폼</title>
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="/css/bootstrap.min.css" rel="stylesheet"/>
+<!--    <link th:href="@{/css/bootstrap.min.css}"-->
+<!--          href="/css/bootstrap.min.css" rel="stylesheet"/>-->
     <link href="/css/profile.css" rel="stylesheet" />
     <style>
         .form_container {
@@ -22,7 +22,6 @@
         }
     </style>
 </head>
-
 <div layout:fragment="content">
     <div class="form_container">
         <div class="py-5 text-center">
