--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -7,7 +7,7 @@
     padding: 0;
     margin-top: 0px;
     margin-left: 100px;
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .navbar-brand {
     height: 50px;
@@ -34,20 +34,21 @@
 .navbar-collapse {
 }
 
-.search-input {
-    width: 200px;
-    height: 30px;
-    font-size: 13px;
-    border: 0;
-    border-radius: 10px;
-    outline: none;
-    padding-left: 10px;
-    background-color: #f1f3f5;
-    /*background-color: rgb(233, 233, 233);*/
-}
+
 .search-bar {
     padding-top: 5px;
 }
+.search-input {
+     width: 200px;
+     height: 30px;
+     font-size: 13px;
+     border: 0;
+     border-radius: 10px;
+     outline: none;
+     padding-left: 10px;
+     background-color: #f1f3f5;
+     /*background-color: rgb(233, 233, 233);*/
+ }
 .search-btn {
     border: 0;
     background-color: transparent;
@@ -104,10 +105,10 @@
     /*border-color: #212529;*/
 
 }
-.custom-btn-check:focus + .custom-btn, .custom-btn:focus {
+/*.custom-btn-check:focus + .custom-btn, .custom-btn:focus {
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-}
+}*/
 .custom-btn:disabled, .custom-btn.disabled, fieldset:disabled .btn {
     pointer-events: none;
     opacity: 0.65;
