--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -2,7 +2,7 @@
 
 <html xmlns:th="http://www.thymeleaf.org" th:fragment="fragment-nav">
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top custom-navbar">
-        <div class="container custom-navbar-container fixed-top">
+        <div class="container container-nav fixed-top">
             <a class="navbar-brand" href="/">
                 <img class="img-icon" src="/css/images/main_icon.png"/>
                 <p class="img-logo">망고마켓</p>
@@ -11,15 +11,15 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-xl-5">
+                <ul class="navbar-nav me-lg-auto ,  ㅛㅛㅛ ㅛㅛㅛㅛ/메';ㅕ4ㄷ mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page"
                                             th:href="@{/post/board}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+          <ㅇ>₩₩ `   `2</ㅇ>              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    1                           <li><a class="dropdown-item" href="#!">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider"/>
                             </li>
