--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -11,15 +11,15 @@
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-lg-auto ,  ㅛㅛㅛ ㅛㅛㅛㅛ/메';ㅕ4ㄷ mb-lg-0">
+                <ul class="navbar-nav me-auto mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page"
                                             th:href="@{/post/board}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
-          <ㅇ>₩₩ `   `2</ㅇ>              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    1                           <li><a class="dropdown-item" href="#!">All Products</a></li>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#!">All Products</a></li>
                             <li>
                                 <hr class="dropdown-divider"/>
                             </li>
