--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -20,6 +20,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
+
     </head>
     <th:block layout:fragment="head" />
 
@@ -28,11 +29,11 @@
             <!-- Navigation-->
             <div th:replace="~{/fragments/nav.html :: fragment-nav}"></div>
             <!-- Section-->
-            <section class="py-5">
-                <div class="container px-4 px-lg-5 mt-5">
+<!--            <section class="py-5">-->
+<!--                <div class="container px-4 px-lg-5 mt-5">-->
                     <div layout:fragment="content"></div>
-                </div>
-            </section>
+<!--                </div>-->
+<!--            </section>-->
             <!-- Footer-->
             <!--        <footer class="py-5 bg-dark">
                     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
