--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -84,9 +84,14 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  background-color: white;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+  padding-top: 0;
+  font-size: 12px;
+  /*color: white;*/
+  font-family: 'Open Sans',sans-serif;
 }
 
 hr {
@@ -11312,7 +11317,6 @@ textarea.form-control-lg {
 
 
 /*  custom*/
-
 .btn-orange {
   display: inline-block;
   font-weight: 400;
@@ -11326,7 +11330,7 @@ textarea.form-control-lg {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #ff6a00;
+  background-color: #ff9d0a;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
