--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -4627,7 +4627,7 @@ textarea.form-control-lg {
 .card-img-detail {
   width: 100%;
   height: 30rem;
-  object-fit: contain;
+  object-fit: contain !important;
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
