--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,20 +13,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-lg-0">
                     <li class="nav-item"><a class="nav-link active" aria-current="page"
-                                            th:href="@{/post/board}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                                            th:href="@{/post/board}">중고거래</a></li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                           data-bs-toggle="dropdown" aria-expanded="false">카테고리</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
-                            <li>
-                                <hr class="dropdown-divider"/>
+                            <li th:each="category:${T(com.exercise.carrotproject.domain.enumList.Category).values()}">
+                                <a class="dropdown-item" th:href="@{/post/board/{category}(category=${category.name()})}">
+                                    [[${category.category}]]
+                                </a>
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item"><a class="nav-link" href="#!">고객센터</a></li>
                  </ul>
                 <form class="d-flex search-bar" id="search-form" th:action="@{/post/search}" method="get">
                     <input type="text" class="search-input" name="word" placeholder="물품을 검색해주세요">
