--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -8,15 +8,19 @@
   <style>
     .form-container {
       max-width: 560px;
-      padding-left: 100px;
+      margin: 20px;
+    }
+    .loginForm-border {
+      height: 600px;
+      border: 1px solid #dee2e6;
+      border-radius: 20px;
+      /*box-shadow: 10px 20px 30px 40px #ced4da;*/
+      padding: 0px 20px 50px 20px;
     }
     .field-error {
       border-color: #dc3545;
       color: #dc3545;
     }
-    /*#kakao {*/
-    /*  width: 100px;*/
-    /*}*/
     #kakao img{
       width: 300px;
       cursor: pointer;
@@ -25,103 +29,61 @@
 </head>
 
 <div layout:fragment="content">
-  <div class="form-container">
-    <div class="py-5 text-center">
-      <h2>로그인</h2>
-    </div>
-    <!--intelliJ에서 thymelaf를 인식하는게 완벽하지는 않아서 이렇게 인식을 잘못하는 경우가 있다.
-      @ModelAttribute에 (name="loginForm") 명시하지 않을 경우
-      실행에 문제가 없다면 넘어가도 된다.-->
-    <form action="" th:action th:object="${loginForm}" method="post">
-      <div th:if="${#fields.hasGlobalErrors()}">
-        <p class="field-error" th:each="err : ${#fields.globalErrors()}"
-           th:text="${err}">전체 오류 메시지</p>
-      </div>
+  <section class="container px-md-5 mt-5 d-flex justify-content-center">
+    <div class="form-container py-5">
+      <div class="loginForm-border">
+        <div class="py-4 text-center">
+          <h2>로그인</h2>
+        </div>
+        <form action="" th:action th:object="${loginForm}" method="post">
+          <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+               th:text="${err}">전체 오류 메시지</p>
+          </div>
 
-      <div>
-        <label for="loginId">로그인 ID</label>
-        <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
-               th:errorclass="field-error">
-        <div class="field-error" th:errors="*{loginId}" />
-      </div>
+          <div>
+            <label for="loginId">로그인 ID</label>
+            <input type="text" id="loginId" th:field="*{loginId}" class="form-control"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{loginId}" />
+          </div>
 
-      <div>
-        <label for="pwd">비밀번호</label>
-        <input type="password" id="pwd" th:field="*{pwd}"
-               class="form-control"
-               th:errorclass="field-error">
-        <div class="field-error" th:errors="*{pwd}" />
+          <div>
+            <label for="pwd">비밀번호</label>
+            <input type="password" id="pwd" th:field="*{pwd}"
+                   class="form-control"
+                   th:errorclass="field-error">
+            <div class="field-error" th:errors="*{pwd}" />
+          </div>
+          <hr class="my-4">
+          <div class="col">
+            <div class="row">
+              <button class="w-100 btn btn-secondary btn-lg"
+                      onclick="location.href='/member/signupForm'"
+                      th:onclick="|location.href='@{/members/signup}'|"
+                      type="button">회원가입</button>
+            </div>
+        <!--    <div class="row">
+              <button class="w-100 btn btn-secondary btn-lg"
+                      onclick="location.href='/'"
+                      th:onclick="|location.href='@{/}'|"
+                      type="button">취소</button>
+            </div>-->
+            <div class="row">
+              <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+            </div>
+            <div class="row" id="kakao" th:onclick="loginWithKakao()">
+              <img src="/css/images/login/kakao_login.png">
+            </div>
+          </div>
+        </form>
       </div>
-      <hr class="my-4">
-      <div class="row">
-        <div class="col">
-          <button class="w-100 btn btn-secondary btn-lg"
-                  onclick="location.href='/member/signupForm'"
-                  th:onclick="|location.href='@{/members/signup}'|"
-                  type="button">회원가입</button>
-        </div>
-        <div class="col">
-          <button class="w-100 btn btn-secondary btn-lg"
-                  onclick="location.href='/'"
-                  th:onclick="|location.href='@{/}'|"
-                  type="button">취소</button>
-        </div>
-        <div class="col">
-          <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
-        </div>
-      </div>
-      <div class="row">
-        <div id="google"> </div>
-      </div>
-      <div class="row" id="kakao" th:onclick="loginWithKakao()">
-          <img src="/css/images/login/kakao_login.png">
-      </div>
-    </form>
-  </div> <!-- /form-container -->
+    </div> <!-- /form-container -->
+  </section>
 </div>
 
 <div layout:fragment="script" >
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  <script src="https://accounts.google.com/gsi/client?hl=kr" async defer></script>
   <script th:inline="javascript">
-/*    function handleCredentialResponse(response) {
-      console.log("Encoded JWT ID token: " + response.credential);
-      const responsePayload = decodeJwtResponse(response.credential);
-      console.log("ID: " + responsePayload.sub);
-      console.log('Full Name: ' + responsePayload.name);
-      console.log('Given Name: ' + responsePayload.given_name);
-      console.log('Family Name: ' + responsePayload.family_name);
-      console.log("Image URL: " + responsePayload.picture);
-      console.log("Email: " + responsePayload.email);
-
-      // ajax 호출
-      $.ajax({
-        type: "POST",
-        url: "/api/auth/google",
-        contentType: "application/json",
-        data: JSON.stringify({
-          idToken: response.credential
-        }),
-        success: function(response) {
-          console.log(response);
-        },
-        error: function(error) {
-          console.log(error);
-        }
-      });
-    }
-    window.onload = function () {
-      google.accounts.id.initialize({
-        client_id: "365276835581-b5a4fqe0pf342c700r4kb9m3i9bd470h.apps.googleusercontent.com",
-        callback: handleCredentialResponse
-      });
-      google.accounts.id.renderButton(
-              document.getElementById("google"),
-              { theme: "outline", size: "large" }  // customization attributes
-      );
-      google.accounts.id.prompt(); // also display the One Tap dialog
-    }*/
-
     function loginWithKakao() {
       $.ajax({
         url: '/login/getKakaoLoginURL',
@@ -130,8 +92,6 @@
         location.href = res;
       });
     }
-
-
   </script>
 </div>
 </html>
